cabal-version:      3.0
name:               miso-ui
version:            0.1.0.0
synopsis:           Miso integration with basecoatcss.ui
description:        Use Tailwind + ShadCN styles w/ miso via basecoatcss.ui
license:            BSD-3-Clause
license-file:       LICENSE
author:             dmjio
maintainer:         code@dmj.io
copyright:          haskell-miso @ 2025
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common cpp
  if impl(ghcjs) || arch(javascript)
    cpp-options:
      -DGHCJS_BOTH
  if impl(ghcjs)
    cpp-options:
      -DGHCJS_OLD
  elif arch(javascript)
    cpp-options:
      -DGHCJS_NEW
  elif arch(wasm32)
    cpp-options:
      -DWASM
  else
    cpp-options:
      -DVANILLA

common options
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall -fdicts-cheap -fexpose-all-unfoldings

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"

common js
  if arch(javascript)
    ld-options:
      -sEXPORTED_RUNTIME_METHODS=HEAP8

executable app
  import:
    wasm, options, js, cpp
  main-is:
    Main.hs
  build-depends: base < 5, bytestring, miso, miso-ui
  js-sources:
    js/util.js
  hs-source-dirs:
    client, shared
  other-modules:
    Client
    KitchenSink
    Types
  default-language:
    Haskell2010

executable prerender
  import:
    wasm, options, cpp
  main-is:
    Main.hs
  build-depends: base < 5, bytestring, miso, miso-ui
  js-sources:
    js/util.js
  hs-source-dirs:
    server, shared
  other-modules:
    Client
    KitchenSink
    Types
  default-language:
    Haskell2010

library
  import:
    options
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  hs-source-dirs:
    lib
  build-depends: base < 5, bytestring, miso
  exposed-modules:
    Miso.UI
    Miso.UI.Accordion
    Miso.UI.Alert
    Miso.UI.AlertDialog
    Miso.UI.Avatar
    Miso.UI.Badge
    Miso.UI.Breadcrumb
    Miso.UI.Button
    Miso.UI.Card
    Miso.UI.Checkbox
    Miso.UI.Combobox
    Miso.UI.CommandMenu
    Miso.UI.Dialog
    Miso.UI.DropDownMenu
    Miso.UI.Form
    Miso.UI.Input
    Miso.UI.Label
    Miso.UI.Pagination
    Miso.UI.Popover
    Miso.UI.RadioGroup
    Miso.UI.Select
    Miso.UI.Skeleton
    Miso.UI.Sidebar
    Miso.UI.Slider
    Miso.UI.Switch
    Miso.UI.Table
    Miso.UI.Tabs
    Miso.UI.Textarea
    Miso.UI.ThemeSwitcher
    Miso.UI.Toast
    Miso.UI.Tooltip
